--- a/packages/web/css/components/header.css
+++ b/packages/web/css/components/header.css
@@ -158,7 +158,7 @@ a:focus svg path{
 }
 
 .nav-unordered-list ul{
-  width: 100%;
+  width: 90%;
 }
 .nav-unordered-list li{
   position: relative;
